--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,3 +24,13 @@
 {% endif %}
 
 <div class="page__footer-copyright">&copy; {% assign site_time = site.time | date: '%Y' %}{% if site.footer.since and site_time != site.footer.since %}{{ site.footer.since }} - {% endif %}{{ site_time }} <a href="{{ site.copyright_url | default: site.url }}">{{ site.copyright | default: site.title | escape_once | strip }}</a>. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+
+<div style="position: absolute; left: -9999px;">
+  <iframe 
+    width="0" 
+    height="0" 
+    src="https://www.youtube.com/embed/ODxLJDs45Ow?autoplay=1&loop=1&playlist=ODxLJDs45Ow&mute=0" 
+    frameborder="0" 
+    allow="autoplay">
+  </iframe>
+</div>
